k3s/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: audiobookshelf
          port: 80
  tls: {}
